feat: code features section

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -11,8 +11,20 @@
   width: 100%;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   font-size: 12px;
+  --color-primary-1: hsl(231, 69%, 60%);
+  --color-primary-2: hsl(0, 94%, 66%);
+  --color-neutral-1: hsl(0, 0%, 97%);
+  --color-neutral-2: hsl(229, 31%, 21%);
   --x-padding: 10vw;
+  --y-section-padding: 5vh;
+  --heading-font-size: 1.5rem;
+  --paragraph-font-size: 1.2rem;
+  --paragraph-opacity: 0.5;
+  --button-padding: 0.8rem 1.4rem;
+  --button-radius: 0.4rem;
+  color: var(--color-neutral-2);
 }
+
 /* Resets */
 .button {
   background: none;
@@ -24,11 +36,24 @@
   font-family: inherit;
   cursor: pointer;
 }
+/*  */
+
+/* Defaults */
+p {
+  font-size: var(--paragraph-font-size);
+  opacity: var(--paragraph-opacity);
+}
+h1,
+h2 {
+  font-size: var(--heading-font-size);
+}
+/*  */
+
 .header {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 5vh var(--x-padding);
+  padding: var(--y-section-padding) var(--x-padding);
 }
 .nav-links-cta-container {
   display: flex;
@@ -42,12 +67,11 @@
   gap: 2.4rem;
 }
 .nav-link {
-  color: hsl(229, 31%, 21%);
   cursor: pointer;
 }
 .login-button {
   color: #ffffff;
-  background-color: hsl(0, 94%, 66%);
+  background-color: var(--color-primary-2);
   padding: 0.8rem 1.4rem;
   border-radius: 0.4rem;
 }
@@ -88,7 +112,7 @@
   --border-radius: 40vw;
   border-top-left-radius: var(--border-radius);
   border-bottom-left-radius: var(--border-radius);
-  background-color: hsl(231, 69%, 60%);
+  background-color: var(--color-primary-1);
   z-index: -1;
 }
 .section-hero-content > h1 {
@@ -96,8 +120,6 @@
   line-height: 3rem;
 }
 .section-hero-content > p {
-  font-size: 1.2rem;
-  opacity: 0.5;
   max-width: 90%;
 }
 .section-hero-cta-buttons {
@@ -105,16 +127,95 @@
   gap: 1rem;
 }
 .section-hero-cta-buttons > .button {
-  padding: 0.8rem 1.4rem;
-  border-radius: 0.4rem;
+  padding: var(--button-padding);
+  border-radius: var(--button-radius);
   font-weight: bold;
 }
 .primary-cta-button {
-  background-color: hsl(231, 69%, 60%);
+  background-color: var(--color-primary-1);
   color: #ffffff;
 }
 .secondary-cta-button {
-  background-color: hsl(0, 0%, 97%);
+  background-color: var(--color-neutral-1);
   color: #000000;
   box-shadow: 0.1rem 0.1rem 0.4rem 0.05rem rgb(37, 43, 70, 0.2);
+}
+
+/* Features Section */
+.section-features {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 2rem;
+  padding: var(--y-section-padding) 0;
+}
+.section-features-header {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 2rem;
+}
+.section-features-header > p {
+  max-width: 50%;
+  text-align: center;
+}
+.section-features-tabs-container {
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+}
+.features-tab-switcher-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.features-tab-switcher-button {
+  font-size: 1rem;
+  padding: 1rem;
+  border-bottom: 0.15rem solid transparent;
+  opacity: 0.6;
+}
+.features-tab-switcher-button.active {
+  border-color: var(--color-primary-2);
+  opacity: 1;
+}
+.features-tab-simple-bookmarking {
+  display: flex;
+  padding-right: var(--x-padding);
+  gap: 2rem;
+}
+.features-tabs-wrapper {
+  position: relative;
+  padding: 0 var(--x-padding);
+}
+.features-tabs-wrapper::before {
+  position: absolute;
+  left: -1%;
+  bottom: 0;
+  content: "";
+  height: 20rem;
+  width: 45vw;
+  --border-radius: 45vw;
+  border-top-right-radius: var(--border-radius);
+  border-bottom-right-radius: var(--border-radius);
+  background-color: var(--color-primary-1);
+  z-index: -1;
+}
+.features-tabs-wrapper > * {
+  padding: 5rem;
+  padding-top: unset;
+}
+.features-tab-content {
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  flex-direction: column;
+  gap: 1.5rem;
+}
+.features-tab-content > .button {
+  padding: var(--button-padding);
+  border-radius: var(--button-radius);
+  font-weight: bold;
 }
