--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -183,12 +183,16 @@ h2 {
 }
 .features-tab-simple-bookmarking {
   display: flex;
-  padding-right: var(--x-padding);
+  height: 50vh;
   gap: 2rem;
+}
+.features-tab-simple-bookmarking > * {
+  width: 50%;
 }
 .features-tabs-wrapper {
   position: relative;
   padding: 0 var(--x-padding);
+  padding-bottom: 2.5rem;
 }
 .features-tabs-wrapper::before {
   position: absolute;
@@ -196,16 +200,18 @@ h2 {
   bottom: 0;
   content: "";
   height: 20rem;
-  width: 45vw;
-  --border-radius: 45vw;
+  --background-overlay-width: 40vw;
+  width: var(--background-overlay-width);
+  --border-radius: var(--background-overlay-width);
   border-top-right-radius: var(--border-radius);
   border-bottom-right-radius: var(--border-radius);
   background-color: var(--color-primary-1);
   z-index: -1;
 }
-.features-tabs-wrapper > * {
-  padding: 5rem;
-  padding-top: unset;
+.features-tab-illustration-wrapper {
+  display: flex;
+  justify-content: flex-start;
+  align-items: flex-start;
 }
 .features-tab-content {
   display: flex;
@@ -214,8 +220,16 @@ h2 {
   flex-direction: column;
   gap: 1.5rem;
 }
+.features-tab-content > p {
+  max-width: 90%;
+}
 .features-tab-content > .button {
   padding: var(--button-padding);
   border-radius: var(--button-radius);
   font-weight: bold;
+}
+.features-tab-illustration {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
 }
