--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -47,6 +47,10 @@ h1,
 h2 {
   font-size: var(--heading-font-size);
 }
+.section {
+  padding-top: var(--y-section-padding);
+  padding-bottom: var(--y-section-padding);
+}
 /*  */
 
 .header {
@@ -86,7 +90,6 @@ h2 {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 5vh 0;
 }
 .section-hero > * {
   flex: 1;
@@ -148,7 +151,6 @@ h2 {
   justify-content: center;
   align-items: center;
   gap: 2rem;
-  padding: var(--y-section-padding) 0;
 }
 .section-features-header {
   display: flex;
@@ -158,7 +160,7 @@ h2 {
   gap: 2rem;
 }
 .section-features-header > p {
-  max-width: 50%;
+  max-width: 40%;
   text-align: center;
 }
 .section-features-tabs-container {
@@ -232,4 +234,63 @@ h2 {
   width: 100%;
   height: 100%;
   object-fit: contain;
+}
+
+/* Download Extension Section */
+.section-download-extension {
+  padding-left: var(--x-padding);
+  padding-right: var(--x-padding);
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+}
+.section-download-extension-header {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 1rem;
+  text-align: center;
+}
+.section-download-extension-header > p {
+  max-width: 50%;
+}
+.section-download-extension-cards-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 2rem;
+  margin: 2rem 0;
+}
+.extension-card {
+  width: fit-content;
+  height: 19rem;
+  width: 15rem;
+  box-shadow: 0.1rem 0.1rem 0.6rem 0.05rem rgb(37, 43, 70, 0.1);
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+  padding: 1rem;
+  border-radius: 0.4rem;
+}
+.extension-card:first-child {
+  transform: translateY(-10%);
+}
+.extension-card:last-child {
+  transform: translateY(10%);
+}
+.extension-card > .extension-card-cta-text {
+  font-weight: bold;
+  opacity: 1;
+}
+.extension-card > .extension-card-minimum-version {
+  font-size: 0.8rem;
+}
+.extension-card > .extension-card-separator-icon {
+  width: 100%;
+}
+.extension-card > .primary-cta-button {
+  padding: var(--button-padding);
+  border-radius: 0.4rem;
+  font-weight: bold;
 }
