--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -51,6 +51,17 @@ h2 {
   padding-top: var(--y-section-padding);
   padding-bottom: var(--y-section-padding);
 }
+.section-header {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 1rem;
+}
+.section-header > p {
+  max-width: 40%;
+  text-align: center;
+}
 /*  */
 
 .header {
@@ -152,17 +163,6 @@ h2 {
   align-items: center;
   gap: 2rem;
 }
-.section-features-header {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  gap: 2rem;
-}
-.section-features-header > p {
-  max-width: 40%;
-  text-align: center;
-}
 .section-features-tabs-container {
   display: flex;
   flex-direction: column;
@@ -243,16 +243,6 @@ h2 {
   display: flex;
   flex-direction: column;
   gap: 2rem;
-}
-.section-download-extension-header {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  gap: 1rem;
-  text-align: center;
-}
-.section-download-extension-header > p {
-  max-width: 50%;
 }
 .section-download-extension-cards-container {
   display: flex;
