fix: use anchor tags on nav links

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -93,6 +93,10 @@ h2 {
 .nav-link {
   cursor: pointer;
 }
+.nav-link > a{
+  color: inherit;
+  text-decoration: none;
+}
 .login-button {
   color: #ffffff;
   background-color: var(--color-primary-2);
