refactor: use icon svg instead of an img tag to style the icons

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -443,6 +443,6 @@ footer {
 .secondary-cta-button:active {
   border-color: var(--color-neutral-2);
 }
-.footer-social-media-icon:active {
+.footer-social-media-icon:active path {
   fill: var(--color-primary-2);
 }
