feat: validate email input

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -377,26 +377,47 @@ a {
 .contact-us-container {
   display: flex;
   justify-content: space-between;
-  align-items: stretch;
+  align-items: flex-start;
   gap: 0.8rem;
 }
-.contact-us-container > input {
-  width: 15rem;
+.contact-us-container > .email-input-wrapper {
+  display: flex;
+  flex-direction: column;
+  justify-content: stretch;
+  align-items: stretch;
+  padding: 0.4rem;
   border-radius: 0.4rem;
+  gap: 0.2rem;
+}
+.contact-us-container > .email-input-wrapper > p {
+  opacity: 0;
+}
+.contact-us-container > .email-input-wrapper:has(.text-input.invalid) {
+  background-color: var(--color-primary-2);
+}
+.contact-us-container > .email-input-wrapper:has(.text-input.invalid) > p {
+  opacity: 1;
+}
+.contact-us-container > .email-input-wrapper > input {
+  width: 15rem;
+  border-radius: 0.2rem;
   font-size: 0.8rem;
   background-color: #ffffff;
   color: #000000;
   padding: 0 1rem;
+  height: 2.4rem;
 }
-.contact-us-container > input::placeholder {
+.contact-us-container > .email-input-wrapper > input::placeholder {
   color: var(--color-neutral-2);
   opacity: 0.4;
 }
 .contact-us-container > .secondary-button {
+  margin-top: 0.2rem;
   padding: var(--button-padding);
   border-radius: 0.4rem;
   border: 0.15rem solid transparent;
   font-weight: bold;
+  height: 100%;
 }
 footer {
   background-color: var(--color-neutral-2);
