--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -585,6 +585,9 @@ footer {
   justify-content: space-between;
   align-items: stretch;
   color: white;
+  transform: translateY(-5%);
+  opacity: 0;
+  pointer-events: none;
 }
 .mobile-navbar-logo-close-button-wrapper {
   display: flex;
@@ -647,6 +650,11 @@ footer {
     --y-section-padding: 10vh;
   }
   /*  */
+  .mobile-navbar-container.visible {
+    opacity: 1;
+    transform: translateY(0%);
+    pointer-events: all;
+  }
   .header {
     padding-top: 5vh;
     padding-bottom: 5vh;
